--- a/src/Musicalog.Api/appsettings.json
+++ b/src/Musicalog.Api/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "MusicLogDb": "Data Source=.;Initial Catalog=MusicLogDB;Persist Security Info=True;User ID=SA;Password=1q2w3e4r!Q@W#E" }
 }
